--- a/index.html
+++ b/index.html
@@ -4,14 +4,90 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>Document</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-expand-sm navbar-light py-3">
+			<div class="container">
+				<a class="navbar-brand fw-bold" href="#"
+					><span class="fo">fo</span><span class="udies">udies</span
+					><span class="dot">.</span></a
+				>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarNavAltMarkup"
+					aria-controls="navbarNavAltMarkup"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Recipes</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About</a>
+						</li>
+						<li class="nav-item">
+							<button class="start-btn btn">Start</button>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
 		<main>
-			<div class="recipe_container"></div>
+			<div class="container">
+				<div
+					class="hero-section text-center text-sm-start d-md-flex justify-content-center align-items-center"
+					style="height: 90vh"
+				>
+					<div class="right-panel mx-5 my-3">
+						<h1 class="hero-title fw-bold"
+							>Easy and <span class="fun-f">f</span><span class="fun-u">u</span
+							><span class="fun-n">n</span><span class="dot">.</span></h1
+						>
+						<p class="lead">Make your own favorite delicious meal.</p>
+						<button class="start-btn btn">Start now</button>
+					</div>
+					<div class="left-panel mx-5 my-5">
+						<img
+							src="./bonbon-healthy-food-online-shopping.png"
+							class="hero-image"
+							alt=""
+						/>
+					</div>
+				</div>
+			</div>
+
+			<!-- <div class="recipe_container"></div> -->
 		</main>
 
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
 		<script src="./app.js"></script>
 	</body>
 </html>
