--- a/index.html
+++ b/index.html
@@ -60,31 +60,23 @@
 			</div>
 		</nav>
 
-		<main>
+		<main class="mt-5">
 			<div class="container">
 				<div
-					class="hero-section text-center text-sm-start d-sm-flex justify-content-center align-items-center"
+					class="hero-section text-center text-sm-start d-sm-flex justify-content-around align-items-center"
 				>
-					<div class="right-panel mx-5 my-3">
+					<div class="right-panel my-3">
 						<h1 class="hero-title fw-bold"
 							>Easy and <span class="fun-f">f</span><span class="fun-u">u</span
 							><span class="fun-n">n</span><span class="dot">.</span></h1
 						>
 						<p class="lead">Make your own favorite delicious meal.</p>
 						<!-- <button class="start-btn btn">Start now</button> -->
+						<button class="generate-btn btn">Generate</button>
 					</div>
-					<div class="left-panel my-5">
-						<img
-							src="./bonbon-healthy-food-online-shopping.png"
-							class="hero-image"
-							alt=""
-						/>
+					<div class="left-panel">
+						<div class="generate-div my-5"> </div>
 					</div>
-				</div>
-
-				<div class="foods">
-					<h4>Top foods</h4>
-					<div class="recipe_container"></div>
 				</div>
 			</div>
 		</main>
