--- a/index.html
+++ b/index.html
@@ -10,82 +10,98 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-			integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-sm navbar-light py-3">
-			<div class="container">
-				<a class="navbar-brand fw-bold" href="#"
-					><span class="fo">fo</span><span class="udies">udies</span
-					><span class="dot">.</span></a
-				>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarNavAltMarkup"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="#">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Recipes</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
-						</li>
-						<li class="nav-item">
-							<button class="start-btn btn">Start</button>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-
-		<main class="mt-5">
-			<div class="container">
-				<div
-					class="hero-section text-center text-sm-start d-sm-flex justify-content-around align-items-center"
-				>
-					<div class="right-panel my-3">
-						<h1 class="hero-title fw-bold"
-							>Easy and <span class="fun-f">f</span><span class="fun-u">u</span
-							><span class="fun-n">n</span><span class="dot">.</span></h1
-						>
-						<p class="lead">Make your own favorite delicious meal.</p>
-						<!-- <button class="start-btn btn">Start now</button> -->
-						<button class="generate-btn btn">Generate</button>
-					</div>
-					<div class="left-panel">
-						<div class="generate-div my-5"> </div>
+		<div class="container">
+			<nav class="navbar navbar-expand-lg navbar-light py-4">
+				<div class="container-fluid">
+					<a class="navbar-brand fw-bold" href="#">foodies</a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav ms-auto">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="#">Home</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Link</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-bs-toggle="dropdown"
+									aria-expanded="false"
+								>
+									Dropdown
+								</a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li><a class="dropdown-item" href="#">Action</a></li>
+									<li><a class="dropdown-item" href="#">Another action</a></li>
+									<li><hr class="dropdown-divider" /></li>
+									<li
+										><a class="dropdown-item" href="#"
+											>Something else here</a
+										></li
+									>
+								</ul>
+							</li>
+						</ul>
 					</div>
 				</div>
-			</div>
-		</main>
+			</nav>
+		</div>
 
+		<!-- Hero section -->
+		<div class="container pt-4">
+			<div>
+				<div class="d-flex justify-content-center align-items-center">
+					<div>
+						<div class="text-center">
+							<h2 class="display-2 fw-bold"
+								>Easy and <span class="f">f</span><span class="u">u</span
+								><span class="n">n</span><span class="dot">.</span></h2
+							>
+							<p class="fs-6 lead">Make your own favorite delicious meal. </p>
+						</div>
+						<div class="input-group mb-3">
+							<input
+								type="text"
+								class="form-control"
+								placeholder="Seach for the food you like"
+								id="food-value"
+							/>
+							<button class="btn" type="button" id="button-addon2"
+								>Search</button
+							>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="results-container">
+					<div id="results" class="d-flex justify-content-center align-items-center flex-wrap p-3"></div>
+				</div>
+			</div>
+		</div>
+
+		<script src="app.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"
 		></script>
-		<script src="./app.js"></script>
 	</body>
 </html>
