--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
 				</div>
 			</div>
 			<div class="results-container">
-					<div id="results" class="d-flex justify-content-center align-items-center flex-wrap p-3"></div>
+				<div
+					id="results"
+					class="d-flex justify-content-center align-items-center flex-wrap p-3"
+				></div>
+
+				<div class="modalContent card bg-danger p-4 shadow">
+					<p>Hi</p>
 				</div>
 			</div>
 		</div>
