--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+			integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Document</title>
+		<title>foodies.</title>
 	</head>
 	<body>
 		<div class="container">
@@ -87,6 +94,9 @@
 							<button class="btn" type="button" id="button-addon2"
 								>Search</button
 							>
+							<button class="btnShuffle btn"
+								><i class="fa-solid fa-shuffle"></i
+							></button>
 						</div>
 					</div>
 				</div>
@@ -97,8 +107,37 @@
 					class="d-flex justify-content-center align-items-center flex-wrap p-3"
 				></div>
 
-				<div class="modalContent card bg-danger p-4 shadow">
-					<p>Hi</p>
+				<div
+					class="modal fade"
+					id="staticBackdrop"
+					data-bs-backdrop="static"
+					data-bs-keyboard="false"
+					tabindex="-1"
+					aria-labelledby="staticBackdropLabel"
+					aria-hidden="true"
+				>
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="staticBackdropLabel"></h5>
+								<button
+									type="button"
+									class="btn-close"
+									data-bs-dismiss="modal"
+									aria-label="Close"
+								></button>
+							</div>
+							<div class="modal-body"></div>
+							<div class="modal-footer">
+								<button
+									type="button"
+									class="btn btn-secondary"
+									data-bs-dismiss="modal"
+									>Close</button
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
