--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<a class="nav-link active" aria-current="page" href="#">Home</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Link</a>
+								<a class="nav-link" href="#">Recipes</a>
 							</li>
 							<li class="nav-item dropdown">
 								<a
@@ -53,17 +53,13 @@
 									data-bs-toggle="dropdown"
 									aria-expanded="false"
 								>
-									Dropdown
+									More
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<li><a class="dropdown-item" href="#">Action</a></li>
-									<li><a class="dropdown-item" href="#">Another action</a></li>
+									<li><a class="dropdown-item" href="#">Cuisines</a></li>
+									<li><a class="dropdown-item" href="#">Ingridients</a></li>
 									<li><hr class="dropdown-divider" /></li>
-									<li
-										><a class="dropdown-item" href="#"
-											>Something else here</a
-										></li
-									>
+									<li><a class="dropdown-item" href="#">Category</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -83,8 +79,9 @@
 								><span class="n">n</span><span class="dot">.</span></h2
 							>
 							<p class="fs-6 lead">Make your own favorite delicious meal. </p>
+							<small>Made with &#10084;&#65039; by Charlito Mecarez Jr.</small>
 						</div>
-						<div class="input-group mb-3">
+						<div class="input-group mb-3 mt-3">
 							<input
 								type="text"
 								class="form-control"
